--- a/Contact.html
+++ b/Contact.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" type="image/icon" href="./asset/images/Screenshot (30).png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yeabsira Mezgebu</title>
@@ -31,26 +32,41 @@
 </table>
 <hr>
 <h3>Contact us..</h3>
+<table cellspacing=10>
+    <tr>
+        <td><label for=fName"">First Name:</label></td>
+        <td><input type="text" id="fName" name="fName"  pattern="[A-Z]" placeholder="only alphabets"></td>
+    </tr>
+    <tr>
+        <td><label for="sName">Second Name:</label></td>
+        <td><input type="text" id="sName" name="sName"  pattern="[A-Z]" placeholder="only alphabets"></td>
+    </tr>
+    <tr>
+        <td><label for="email" >Email:</label></td>
+        <td><input type="email" id="email" name="email" pattern="[A-Z]" placeholder="example@gmail.com"></td>
+    </tr>
+    <tr>
+        <td><label for="Pnumber">PhoneNumber:</label></td>
+        <td><input type="int" id="Pnumber" name="Pnumber" pattern="[0-9]" placeholder="0912457896"></td>
+    </tr>
+    <tr>
+        <td>Country:</td>
+        <td>   <select name="Country" id="">
+            <option value="af">Africa</option>
+            <option value="as">Asia</option>
+            <option value="eu">Europe</option>
+        </select></td>
+    </tr>
+    <tr>
+        <td>What you want to say ??</td>
+        <td><textarea name="comment" id="" cols="30" rows="10"></textarea></td>
+    </tr>
+    <tr>
+        <td><input type="submit" value="submit"></td>
+    </tr>
+</table>
 <form method="POST" action="mailto:yeabsira290@gmail.com" enctype="utf-8">
-    <label for=fName"">First Name:</label>
-    <input type="text" id="fName" name="fName">
-    <br>
-    <label for="sName">Second Name:</label>
-    <input type="text" id="sName" name="sName">
-    <br>
-    <label for="email">Email:</label>
-    <input type="email" id="email" name="email">
-    <br>
-    Country:
-    <select name="Country" id="">
-        <option value="af">Africa</option>
-        <option value="as">Asia</option>
-        <option value="eu">Europe</option>
-    </select>
-    <br>
-    What you want to say ??<br>
-    <textarea name="comment" id="" cols="30" rows="10"></textarea>
-    <input type="submit" value="submit">
+        
 </form>
 
 <hr>
