--- a/Index.html
+++ b/Index.html
@@ -8,15 +8,16 @@
 </head>
 <body>
     <hr>
-    <a href = "Index.html">Home</a> |
-    <a href = "Contact.html">Contact</a>
+    <a href = "Index.html" target="_blank">Home</a> |
+    <a href = "Contact.html" target="_blank">Contact</a>|
+    <a href="Gallery.html" target="_blank">Gallery</a>
     <hr>
 
     <table cellspacing=10>
         
             <tr>
                 <td>
-                <img src="./asset/images/Screenshot (30).png" alt="Yeabsira Mezgebu Profile">
+                <img src="./asset/images/image.jpg" alt="Yeabsira Mezgebu Profile">
                 </td>
 
                 <td>
