--- a/Index.html
+++ b/Index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="icon" type="image/icon" href="./asset/images/Screenshot (30).png">
+    <link rel="icon" type="image/icon.jpg" href="asset/images/image.jpg">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yeabsira Mezgebu</title>
