--- a/Gallery.html
+++ b/Gallery.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="icon" type="image/icon.jpg" href="asset/images/image.jpg">
+    <link rel="icon" type="image/icon.jpg" href="asset/images/Logo.jpg">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yeabsira Mezgebu</title>
+    <title>Yeabsira Mezgebu-Gallery</title>
 </head>
 <body>
     
@@ -15,23 +15,73 @@
     <hr>
 <table>
     <tr>
-        <td><img src="https://images.unsplash.com/photo-1516898265296-14a792aa4b32?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Yeabsira Mezgebu Profile"></td>
-        <td><img src="https://images.unsplash.com/photo-1548537350-f8b0533746ba?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Yeabsira Mezgebu Profile"></td>
-        <td><img src="https://images.unsplash.com/photo-1565534831441-bf290e33a6a4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Yeabsira Mezgebu Profile"></td>
+  
+        <td>
+            <figure>
+                <img src="https://images.unsplash.com/photo-1516898265296-14a792aa4b32?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Yeabsira Mezgebu Profile" style="width:100%">
+                <figcaption>Forest in the winter</figcaption>
+              </figure>
+           </td>
+
+
+        <td>
+            <figure>
+                <img src="https://images.unsplash.com/photo-1548537350-f8b0533746ba?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Yeabsira Mezgebu Profile"  style="width:100%">
+                <figcaption>Person sking in the forest</figcaption>
+            </figure>
+        </td>
+        <td>
+            <figure>
+        <img src="https://images.unsplash.com/photo-1565534831441-bf290e33a6a4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Yeabsira Mezgebu Profile"  style="width:100%">
+        <figcaption>winter almost over</figcaption>
+    </figure>
+    </td>
     </tr>
     <tr>
-        <td><img src="https://images.unsplash.com/photo-1511406361295-0a1ff814c0ce?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Yeabsira Mezgebu Profile"></td>
-        <td><img src="https://images.unsplash.com/photo-1516410529446-2c777cb7366d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Yeabsira Mezgebu Profile"></td>
-        <td><img src="https://images.unsplash.com/photo-1499419865879-453926ae8a72?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Yeabsira Mezgebu Profile"></td>
+        <td><figure>
+            <img src="https://images.unsplash.com/photo-1511406361295-0a1ff814c0ce?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Yeabsira Mezgebu Profile" style="width:100%">
+            <figcaption>Dark koridor</figcaption>
+        </figure>
+        </td>
+        <td>
+            <figure>
+            <img src="https://images.unsplash.com/photo-1516410529446-2c777cb7366d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Yeabsira Mezgebu Profile"  style="width:100%">
+            <figcaption>Road in the forest</figcaption>
+        </figure>
+        </td>
+        <td>
+            <figure>
+            <img src="https://images.unsplash.com/photo-1499419865879-453926ae8a72?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Yeabsira Mezgebu Profile"  style="width:100%">
+            <figcaption>A night in the forest</figcaption>
+        </figure>
+        </td>
     </tr>
     <tr>
-        <td><img src="https://images.unsplash.com/photo-1516744096552-aec945acef07?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Yeabsira Mezgebu Profile"></td>
-        <td><img src="https://images.unsplash.com/photo-1578014400463-5b6ed42adea4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Yeabsira Mezgebu Profile"></td>
-        <td><img src="https://images.unsplash.com/flagged/photo-1560177776-55a762c5c000?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Yeabsira Mezgebu Profile"></td>
+        <td>
+            <figure>
+            <img src="https://images.unsplash.com/photo-1581117308254-755c73f315db?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"  style="width:100%">
+            <figcaption>Chains</figcaption>
+        </figure>
+        </td>
+        <td>
+            <figure>
+            <img src="https://images.unsplash.com/photo-1578014400463-5b6ed42adea4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Yeabsira Mezgebu Profile"  style="width:100%">
+            <figcaption>Bullet shells</figcaption>
+        </figure>
+        </td>
+        <td>
+            <figure>
+            <img src="https://images.unsplash.com/flagged/photo-1560177776-55a762c5c000?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Yeabsira Mezgebu Profile"  style="width:100%">
+            <figcaption>Solider</figcaption>
+        </figure>
+        </td>
     </tr>
 </table>
 <hr>
 <p align="Center">Developed by yeabsira M. &copy;2020</p>
+<a href = "https://www.facebook.com/" target="_blank">Facebook</a> |
+<a href = "https://www.google.com/gmail" target="_blank">Email</a>|
+<a href="https://web.telegram.org/" target="_blank">Telegram</a>
 <hr>
 </body>
 </html>
