--- a/Contact.html
+++ b/Contact.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="icon" type="image/icon.jpg" href="asset/images/image.jpg">
+    <link rel="icon" type="image/icon.jpg" href="asset/images/Logo.jpg">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yeabsira Mezgebu</title>
+    <title>Yeabsira Mezgebu-Contact</title>
 </head>
 <body>
     
@@ -17,7 +17,7 @@
         
         <tr>
             <td>
-            <img src="./asset/images/image.jpg" alt="Yeabsira Mezgebu Profile">
+            <img src="./asset/images/Logo.jpg" alt="Yeabsira Mezgebu Profile">
             </td>
 
             <td>
@@ -79,6 +79,9 @@
 </table>
 <hr>
 <p align="Center">Developed by yeabsira M. &copy;2020</p>
+<a href = "https://www.facebook.com/" target="_blank">Facebook</a> |
+<a href = "https://www.google.com/gmail" target="_blank">Email</a>|
+<a href="https://web.telegram.org/" target="_blank">Telegram</a>
 <hr>
 </body>
 </html>
