Replace tabled made gallery with css and added blog page

--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
     <link rel="icon" type="image/icon.jpg" href="asset/images/Logo.jpg">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yeabsira Mezgebu</title>
+    <title>Yeabsira Mezgebu-Home</title>
 </head>
 <body>
     <hr>
