Done with Assignement IV question2

--- a/question2.html
+++ b/question2.html
@@ -7,20 +7,20 @@
     <title>Question2</title>
 </head>
 <body>
-    <table>
+    <table cellspacing="0" cellpadding="0">
         <tr>
             <td></td>
-            <td></td>
-            <td></td>
+            <td class="First"></td>
+            <td ></td>
+        </tr>
+        <tr>
+            <td class="Second"></td>
+            <td class="Third"></td>
+            <td class="Fourth"></td>
         </tr>
         <tr>
             <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
+            <td class="Fifth"></td>
             <td></td>
         </tr>
     </table>
