Done updating the index.html

--- a/Gallery.html
+++ b/Gallery.html
@@ -9,18 +9,20 @@
 </head>
 <body>
     
+  
     <header>
         <nav>
             <ul>
-                <li><a href="Index.html">Home</a></li>
-                <li><a href="Contact.html">Contact</a></li>
-                <li><a href="Gallery.html">Gallery</a></li>
-                <li><a href="Blog.html">Blog</a></li>
+                <li><a href="Index.html" target="_blank">Home</a></li>
+                <li><a href="Contact.html" target="_blank">Contact</a></li>
+                <li><a href="Gallery.html" target="_blank">Gallery</a></li>
+                <li><a href="Blog.html" target="_blank">Blog</a></li>
+                <li><a href="Mywork.html" target="_blank">My work</a></li>
             </ul>
 
         </nav>
 
-    </header>
+    </header> 
     
     <h3 id="galleryheader">Yeabsira Mezgebu Gallery</h3>
 
