--- a/Blog.html
+++ b/Blog.html
@@ -8,19 +8,21 @@
  
 </head>
 <body>
-
+ 
     <header>
         <nav>
             <ul>
-                <li><a href="Index.html">Home</a></li>
-                <li><a href="Contact.html">Contact</a></li>
-                <li><a href="Gallery.html">Gallery</a></li>
-                <li><a href="Blog.html">Blog</a></li>
+                <li><a href="Index.html" target="_blank">Home</a></li>
+                <li><a href="Contact.html" target="_blank">Contact</a></li>
+                <li><a href="Gallery.html" target="_blank">Gallery</a></li>
+                <li><a href="Blog.html" target="_blank">Blog</a></li>
+                <li><a href="Mywork.html" target="_blank">My work</a></li>
             </ul>
 
         </nav>
 
-    </header>
+    </header> 
+    
     <div id="container">
         <section id="top">
 
