Done making my work.html amd other minor details

--- a/Mywork.html
+++ b/Mywork.html
@@ -22,6 +22,31 @@
         </nav>
 
     </header> 
+    <div class="main">
+
+        <div class="logo"> <img  src="./asset/images/Logo.jpg" alt="Logo"> </div>
+
+        <div class="description">
+
+        <h1 >Yeabsira Mezgebu</h1>
+        <h3 >Student, Addis Ababa University</h3>
+        <p>My name is Yeabsira Mezgebu.I am student at Addis Ababa University.<br>
+            I was born in Addis Ababa.I am begginer webdesigner</p>
+
+        </div>
+    </div>
+              
+
+    <div class="myworkbody">
+
+        <div class="questions">
+            <a href="./Mywork/question1.html" target="_blank">Question1</a><br><br>
+            <a href="./Mywork/question2.html" target="_blank">Question2</a><br><br>
+            <a href="./Mywork/question3.html" target="_blank">Question3</a>
+        </div>
+
+      
+    </div>
 
     <div class="footer">
         <p >Developed by yeabsira M. &copy;2020</p>
