--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="Index.html" target="_blank">Home</a></li>
+                <li><a href="index.html" target="_blank">Home</a></li>
                 <li><a href="Contact.html" target="_blank">Contact</a></li>
                 <li><a href="Gallery.html" target="_blank">Gallery</a></li>
                 <li><a href="Blog.html" target="_blank">Blog</a></li>
