Done with assignement iv question 4

--- a/Blog.html
+++ b/Blog.html
@@ -32,10 +32,25 @@
 
         </p>
         <article>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium aut porro iste accusamus illo dolorem odit eum, corrupti, nihil asperiores fugit rem dicta corporis!</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium aut porro iste accusamus illo dolorem odit eum, corrupti, nihil asperiores fugit rem dicta corporis!</p>      
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium aut porro iste accusamus illo dolorem odit eum, corrupti, nihil asperiores fugit rem dicta corporis!</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium aut porro iste accusamus illo dolorem odit eum, corrupti, nihil asperiores fugit rem dicta corporis!</p>
+<p><h4>It does matter</h4> <br> In css there are two types of size styling which are absolute and relative styling.
+     The absolute styling uses units like px, mm, cm. This styling method gives fixed length. 
+    The given property by absolute styling methods stays the same. This is a big trouble because there are a wide variety of sreen size and resolutions. 
+    So if make our heading to be nice and big using abosolute styling it may be fine in bigger screens but when viewd on smaller screens it may be too big. 
+    And the other disadvantage is our browsers have a way to maximize or minimize font size. So if our styling is absolute there is no way the browsers can affect
+that our text.</p>
+<p>The other way of styling is relative styling which uses the units like %, em, rem. % means the given style is relative to the parent element.
+     em means the given size is relative to current element. and rem means the given size is relative to the root element.</p>
+
+     <p>So lets go back to the issues mentioned before. In relative styling all those problems are gone. 
+         Considering screen size relative styling give size to an elemnt relative to the screen size so if we open the site in diffrent screen sized devices 
+        both will show th layout of the site is maintained. And the other is browsers zooming, this will not be a problem too what is gona 
+        happen is the relative size will adapte the new screen size change and maintain its layout. </p>
+
+        <p>So in my opinion using relative styling matters if we wants to make a site which is not dependent 
+            on screen size and can be viwed the same in any device </p>
+
+</p>
+
 </article>
 
 
