Done with assignement iv question 5

--- a/Blog.html
+++ b/Blog.html
@@ -23,16 +23,21 @@
         </nav>
 
     </header> 
+
+    <h2 id="blogheader">Blog</h2>
     
     <div id="container">
+
         <section id="top">
 
         <p class="title">
             Question 4
 
         </p>
+        
         <article>
-<p><h4>It does matter</h4> <br> In css there are two types of size styling which are absolute and relative styling.
+            <h4>It does matter</h4>
+<p> <br> In css there are two types of size styling which are absolute and relative styling.
      The absolute styling uses units like px, mm, cm. This styling method gives fixed length. 
     The given property by absolute styling methods stays the same. This is a big trouble because there are a wide variety of sreen size and resolutions. 
     So if make our heading to be nice and big using abosolute styling it may be fine in bigger screens but when viewd on smaller screens it may be too big. 
@@ -47,9 +52,9 @@ that our text.</p>
         happen is the relative size will adapte the new screen size change and maintain its layout. </p>
 
         <p>So in my opinion using relative styling matters if we wants to make a site which is not dependent 
-            on screen size and can be viwed the same in any device </p>
+            on screen size and can be viwed the same in any device.</p>
 
-</p>
+
 
 </article>
 
@@ -63,10 +68,9 @@ that our text.</p>
 
     </p>
     <article>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium aut porro iste accusamus illo dolorem odit eum, corrupti, nihil asperiores fugit rem dicta corporis!</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium aut porro iste accusamus illo dolorem odit eum, corrupti, nihil asperiores fugit rem dicta corporis!</p>      
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium aut porro iste accusamus illo dolorem odit eum, corrupti, nihil asperiores fugit rem dicta corporis!</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium aut porro iste accusamus illo dolorem odit eum, corrupti, nihil asperiores fugit rem dicta corporis!</p>
+<p><br><br>The default browser width is 16px. This can be taken as by the standard conversion  formula &emsp; 16px = 100%. So, when we say 200px it will be converted by this manner which is 1250% so what this basically means is I want my elemnt to be this percent higher than the default. It is relative.
+</p>
+
 </article>
 
 </section>
